# command-line-interface

./: .gitignore  LICENSE  README.md  __init__.py  bitinglip.py  client.py  cluster-cli.py  config.py  main.py  pyproject.toml  requirements.txt  setup_cli.sh  utils.py
cli/: __init__.py  client.py  config.py  main.py  utils.py
cli/commands/: __init__.py  cluster.py  models.py  system.py  tasks.py  workers.py
docs/: ANALYSIS_REPORT.md
